cabal-version: 2.4
name: count-distinct
version: 0.1.0.0
synopsis: Variant of hyperloglog using 64 bits for state
homepage: https://github.com/layer-3-communications/count-distinct
bug-reports: https://github.com/layer-3-communications/count-distinct/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2020 Layer 3 Communications
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Count.Distinct
  build-depends:
    , base >=4.12 && <5
    , bytestring
  hs-source-dirs: src
  default-language: Haskell2010
